--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
   </head>
   <body>
 
-    
     <div class="header">
+    <div class="header-logo">Header Logo</div>
+    <div class="header-links">
         <ul>
-            <li><a href="#">⭐ - link one</a></li>
-            <li><a href="#">🦸🏽‍♂️ - link two</a></li>
-            <li><a href="#">🖌️ - link three</a></li>
+            <li><a href="#">link one</a></li>
+            <li><a href="#">link two</a></li>
+            <li><a href="#">link three</a></li>
           </ul>
     </div>
+  </div>
     
     <div class="container1">
         <div class="c1container">
@@ -27,24 +29,48 @@
         <button class="c1button">Sign up</button>
     </div>
 
-        <div class="c1picture"><img src="./Images/red-box-1.jpg" alt="Project logo."></div>
+        <div class="c1picture"><img src="./Images/new-pic1.jpg" alt="Project logo."></div>
 
     </div>
 
     <div class="container2">
-        <div class="card">Lorem ipsum dolor sit amet consecte</div>
+      <div class="c2text">Some random information</div>
+        <div class="all-plants">
+          <div class="picture">
+            <img src="./Images/barberry.png" alt="barberry">
+            <div class="text">Barberry</div>
+          </div>
+          <div class="picture">
+            <img src="./Images/chilli.png" alt="chili">
+            <div class="text">Chili</div>
+          </div>
+          <div class="picture">
+            <img src="./Images/pepper.png" alt="pepper">
+            <div class="text">Pepper</div>
+          </div>
+          <div class="picture">
+            <img src="./Images/saffron.png" alt="saffron">
+            <div class="text">Saffron</div>
+          </div>
     </div>
+  </div>
 
     <div class="container3">
-        <div class="card">Lorem ipsum dolor sit amet consecte</div>
-    </div>
+      <div class="quote">This is an inspiring quote, or a testiominal from a customer. 
+        Maybe It's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice.</div>
+        <div class="thor">-Thor, God of Thunder</div>
+      </div>
 
     <div class="container4">
-        <div class="card">Lorem ipsum dolor sit amet consecte</div>
+      <div class="c4alltext">
+        <div class="c4call">Call to action! It's time!</div>
+        <div class="c4text">Sign up for product by clicking that button right over there!</div>
+      </div>
+        <button class="c4button">Sign up</button>
     </div>
 
     <div class="footer">
-    copyright the odin prjkect
+    Copyright The Odin Project 2021
     </div>
   </body>
 </html>
