--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </div>
 
     <div class="footer">
-    Copyright The Odin Project 2021
+      Copyright © The Odin Project 2021
     </div>
   </body>
 </html>
